cot-macros/tests/ui/attr_model_generic.rs
use cot::db::model;

#[model]
struct MyModel<T> {
    #[model(primary_key)]
    id: i32,
    some_data: T,
}

fn main() {}
